--- a/package.json
+++ b/package.json
@@ -19,22 +19,29 @@
     "clean:wxt": "pnpm wxt clean",
     "clean:pnpm": "rm -rf node_modules && rm -rf pnpm-lock.yaml",
     "clean:dist": "rm -rf dist",
-    "clean": "pnpm run clean:wxt && pnpm run clean:dist"
+    "clean": "pnpm run clean:wxt && pnpm run clean:dist",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@tailwindcss/vite": "^4.0.6",
     "@types/chrome": "^0.0.280",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@wxt-dev/module-react": "^1.1.3",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.15.0",
     "prettier": "3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
     "vite": "^5.4.14",
     "wxt": "^0.19.27"
   }
