--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,12 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '23'
+          node-version: 'latest'
           cache: 'pnpm'
-
-      - run: npm install -g pnpm
 
       - run: pnpm install
 
