--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/chrome": "^0.0.280",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@wxt-dev/i18n": "^0.2.3",
     "@wxt-dev/module-react": "^1.1.3",
     "eslint": "^9.20.1",
     "eslint-plugin-react": "^7.37.4",
